--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ footer {
 <section class="tab-content" id="achievements">
 <h2>Достижения</h2>
 <ul>
-<li>Региональные соревнования — 6 место</li>
-<li>Лучший дизайн робота — 2025-2026</li>
+<li>Innivation Project award Finalist - Kokshetau Regional</li>
+<li>Peer award - Astana Qualifiers</li>
 </ul>
 </section>
 
