--- a/index.html
+++ b/index.html
@@ -3,275 +3,352 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Команда FLL Obalduyes</title>
+<title>FLL Obalduyes</title>
 
-<!-- Google Fonts: Montserrat -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-/* ===== ФОН И ЗВЁЗДЫ ===== */
 body {
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1.6;
     margin: 0;
-    padding: 0;
-    background-color: #0b1d4a;
-    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    background: #0b1d4a;
+    color: white;
     overflow-x: hidden;
-    position: relative;
 }
 
-/* Звёзды */
+/* ЗВЁЗДНОЕ НЕБО */
 body::before {
     content: "";
     position: fixed;
-    top: 0;
-    left: 0;
     width: 200%;
     height: 200%;
+    top: 0;
+    left: 0;
     background: transparent;
     box-shadow:
-      50px 80px #ffffff, 120px 200px #ffffff, 200px 50px #ffffff,
-      300px 400px #ffffff, 400px 150px #ffffff, 500px 300px #ffffff,
-      600px 100px #ffffff, 700px 350px #ffffff, 800px 250px #ffffff,
-      900px 450px #ffffff, 1000px 200px #ffffff, 1100px 400px #ffffff,
-      1200px 50px #ffffff, 1300px 300px #ffffff, 1400px 150px #ffffff,
-      1500px 500px #ffffff, 1600px 100px #ffffff, 1700px 350px #ffffff;
-    animation: twinkle 5s linear infinite;
+        50px 100px white, 200px 300px white, 400px 150px white,
+        600px 500px white, 800px 200px white, 1000px 400px white,
+        1200px 100px white, 1400px 350px white, 1600px 250px white,
+        300px 600px white, 700px 50px white, 1100px 550px white,
+        1700px 450px white, 1900px 150px white,
+        250px 800px white, 900px 700px white, 1500px 650px white;
+    animation: stars 6s infinite alternate;
     z-index: 0;
 }
 
-@keyframes twinkle {
-    0%, 100% {opacity: 0.8;}
-    50% {opacity: 1;}
+@keyframes stars {
+    from { opacity: 0.6; }
+    to { opacity: 1; }
 }
 
-/* ===== ШАПКА ===== */
+/* ШАПКА */
 header {
-    background-color: rgba(11,29,74,0.85);
-    color: #ffffff;
-    padding: 25px 20px;
     text-align: center;
-    border-bottom: 4px solid #007ACC;
+    padding: 50px 20px;
     position: relative;
     z-index: 1;
 }
 
 header h1 {
+    font-size: 3em;
     margin: 0;
-    font-size: 2.5em;
-    font-weight: 700;
 }
 
 header p {
-    font-size: 1.2em;
-    margin: 5px 0 15px;
-    font-weight: 600;
+    font-size: 1.3em;
+    color: #7cc7ff;
 }
 
-/* ===== НАВИГАЦИЯ ===== */
+/* НАВИГАЦИЯ */
 nav {
     display: flex;
     justify-content: center;
+    gap: 12px;
     flex-wrap: wrap;
-    gap: 10px;
-    position: relative;
-    z-index: 1;
+    margin-top: 20px;
 }
 
-nav .tab-button {
-    background-color: #ffffff;
-    color: #0b1d4a;
-    border: 2px solid #0b1d4a;
-    border-radius: 8px;
-    padding: 10px 20px;
+nav button {
+    background: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 20px;
     cursor: pointer;
     font-weight: 600;
-    transition: all 0.3s ease;
+    transition: 0.3s;
 }
 
-nav .tab-button:hover {
-    background-color: #0b1d4a;
-    color: #ffffff;
+nav button:hover {
+    background: #7cc7ff;
+    transform: translateY(-3px);
 }
 
-/* ===== СЕКЦИИ ===== */
+/* КОНТЕНТ */
 main {
+    max-width: 900px;
+    margin: auto;
     padding: 20px;
     position: relative;
     z-index: 1;
 }
 
-.tab-content {
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 20px;
-    margin-top: 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    display: none; /* скрываем все вкладки по умолчанию */
+.section {
+    display: none;
+    background: rgba(0,0,0,0.6);
+    padding: 25px;
+    border-radius: 15px;
+    margin-bottom: 25px;
 }
 
-.tab-content img {
-    display: block;
-    margin: 15px auto;
-    max-width: 100%;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-}
-
-.tab-content h2 {
-    color: #007ACC;
+.section h2 {
+    color: #7cc7ff;
     margin-top: 0;
-    border-bottom: 2px solid #007ACC;
-    padding-bottom: 5px;
-    font-weight: 700;
-    font-size: 1.8em;
 }
 
-.tab-content ul {
-    list-style-type: square;
-    padding-left: 20px;
+/* УЧАСТНИКИ */
+.member {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 25px;
+    background: rgba(255,255,255,0.08);
+    padding: 20px;
+    border-radius: 15px;
+    transition: 0.3s;
 }
 
-/* ===== ФУТЕР ===== */
+.member:hover {
+    transform: scale(1.02);
+    background: rgba(255,255,255,0.12);
+}
+
+.member-text {
+    max-width: 65%;
+}
+
+.member-text h3 {
+    margin-top: 0;
+    color: #7cc7ff;
+}
+
+.member img {
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 3px solid #7cc7ff;
+}
+
+/* АДАПТАЦИЯ */
+@media (max-width: 700px) {
+    .member {
+        flex-direction: column;
+        text-align: center;
+    }
+    .member-text {
+        max-width: 100%;
+    }
+}
+
+/* ФУТЕР */
 footer {
     text-align: center;
-    padding: 15px 0;
-    background-color: rgba(11,29,74,0.85);
-    color: #ffffff;
-    margin-top: 30px;
-    border-top: 4px solid #007ACC;
-    border-radius: 0 0 12px 12px;
-    position: relative;
-    z-index: 1;
+    padding: 20px;
+    color: #aaa;
 }
 
-/* ===== ШКОЛА ===== */
-.school-note {
-    font-weight: bold;
-    color: #007ACC;
-}
+.section {
+    display: none; /* уже есть */
+    background: rgba(0,0,0,0.6);
+    padding: 25px;
+    border-radius: 15px;
+    margin-bottom: 25px;
 
-/* ===== ГАЛЕРЕЯ ===== */
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: center;
+    /* новые свойства для анимации */
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
 }
-
-.gallery img {
-    width: 200px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    transition: transform 0.3s;
-}
-
-.gallery img:hover {
-    transform: scale(1.05);
-}
-
-/* ===== НОВОСТИ ===== */
-.news-item {
-    background-color: rgba(255,255,255,0.1);
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 8px;
-}
-
-.news-item h3 {
-    margin: 0;
-    color: #007ACC;
-    font-weight: 600;
+.section.active {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
 }
 </style>
 </head>
 
 <body>
+
 <header>
-<h1>Команда FLL Obalduyes</h1>
-<p>Мы из лицея <span class="school-note">БИЛ города Кокшетау</span></p>
+<h1>FLL Obalduyes</h1>
+<p>Команда Bilim-Innovation Lyceum города Кокшетау</p>
+
 <nav>
-<button class="tab-button" data-tab="about">О команде</button>
-<button class="tab-button" data-tab="project">Проект / Робот</button>
-<button class="tab-button" data-tab="achievements">Достижения</button>
-<button class="tab-button" data-tab="gallery">Галерея</button>
-<button class="tab-button" data-tab="news">Новости</button>
-<button class="tab-button" data-tab="contacts">Контакты</button>
+<button onclick="openTab('home')">Главная</button>
+<button onclick="openTab('project')">Проект</button>
+<button onclick="openTab('robot')">Робот</button>
+<button onclick="openTab('team')">Команда</button>
+<button onclick="openTab('values')">Core Values</button>
+<button onclick="openTab('achievements')">Достижения</button>
+<button onclick="openTab('contacts')">Контакты</button>
+<button onclick="location.href='en.html'">EN</button>
 </nav>
 </header>
 
 <main>
-<section class="tab-content" id="about">
-<h2>О команде</h2>
-<p>Наша команда состоит из 7 участников. Наставники: Антар, Инсар, Санжар, Ансар, Алиби, Азиз, Нурали.</p>
+
+<section id="home" class="section">
+<h2>🚀 Наша миссия</h2>
+<p>
+Мы — команда FLL Obalduyes из <b>Bilim-Innovation Lyceum города Кокшетау</b>.
+Мы изучаем сложные и опасные места, такие как катакомбы,
+и создаём инженерные решения с помощью робототехники.
+</p>
+<p style="margin-top:15px; font-style: italic; color:#ccc;">
+Мы верим, что технологии помогают исследовать неизвестное и делать мир безопаснее.
+</p>
 </section>
 
-<section class="tab-content" id="project">
-<h2>Проект / Робот</h2>
-<p>Наш проект посвящён катакомбам — огромной сети подземных тоннелей и кладбищ, расположенных под городами. Катакомбы скрывают исторические захоронения и загадочные коридоры, которые долгое время оставались неизвестными.</p>
-<p>Мы изучаем структуру этих подземелий, делаем карты и схемы, чтобы показать, как они устроены, где находятся известные захоронения и какие опасности там встречаются.</p>
-<p>Цель проекта — собрать достоверную информацию о катакомбах, визуализировать их с помощью диаграмм и схем, а также повысить интерес к истории и археологии среди других команд и зрителей.</p>
-<img src="images/robot.jpg" alt="Наш робот">
+<section id="project" class="section">
+<h2>🧠 Проект: Катакомбы</h2>
+<p>
+Катакомбы — это огромные подземные тоннели, скрытые под городами.
+Они опасны, плохо изучены и полны исторических загадок.
+</p>
+<p>
+Мы изучаем их структуру, создаём схемы и визуализации,
+чтобы показать, как можно безопасно исследовать такие места.
+</p>
 </section>
 
-<section class="tab-content" id="achievements">
-<h2>Достижения</h2>
+<section id="robot" class="section">
+<h2>🤖 Наш робот</h2>
 <ul>
-<li>Innivation Project award Finalist - Kokshetau Regional</li>
-<li>Peer award - Astana Qualifiers</li>
+<li>Автономный и ручной режим</li>
+<li>Навигация в узких тоннелях</li>
+<li>Измерение расстояний</li>
+<li>Помощь в построении карт катакомб</li>
 </ul>
 </section>
 
-<section class="tab-content" id="gallery">
-<h2>Галерея</h2>
-<div class="gallery">
-<img src="images/photo1.jpg" alt="Фото 1">
-<img src="images/photo2.jpg" alt="Фото 2">
-<img src="images/photo3.jpg" alt="Фото 3">
-<img src="images/photo4.jpg" alt="Фото 4">
+<section id="team" class="section">
+<h2>👥 Наша команда</h2>
+
+<div class="member">
+<div class="member-text">
+<h3>Антар</h3>
+<p><b>Роль:</b> Project Maker, Coder</p>
+<p><b>Возраст:</b> 13 лет</p>
+<p><b>Занимается:</b> Идея проекта, автономность робота</p>
 </div>
+<img src="images/antar.jpg">
+</div>
+
+<div class="member">
+<div class="member-text">
+<h3>Инсар</h3>
+<p><b>Роль:</b> Coder, Engineer</p>
+<p><b>Возраст:</b> 13 лет</p>
+<p><b>Занимается:</b> Программирование и сборка робота</p>
+</div>
+<img src="images/insar.jpg">
+</div>
+
+<div class="member">
+<div class="member-text">
+<h3>Санжар</h3>
+<p><b>Роль:</b> Engineer, SMM</p>
+<p><b>Возраст:</b> 13 лет</p>
+<p><b>Занимается:</b> Конструкция робота, социальное развитие</p>
+</div>
+<img src="images/sanzhar.jpg">
+</div>
+
+<div class="member">
+<div class="member-text">
+<h3>Ансар</h3>
+<p><b>Роль:</b> Engineer</p>
+<p><b>Возраст:</b> 14 лет</p>
+<p><b>Занимается:</b> Тестирование и улучшение робота</p>
+</div>
+<img src="images/ansar.jpg">
+</div>
+
+<div class="member">
+<div class="member-text">
+<h3>Алиби</h3>
+<p><b>Роль:</b> Project Maker</p>
+<p><b>Возраст:</b> 13 лет</p>
+<p><b>Занимается:</b> Презентация и её дизайн</p>
+</div>
+<img src="images/alibi.jpg">
+</div>
+
+<div class="member">
+<div class="member-text">
+<h3>Азиз</h3>
+<p><b>Роль:</b> Project Maker</p>
+<p><b>Возраст:</b> 13 лет</p>
+<p><b>Занимается:</b> Подача проекта</p>
+</div>
+<img src="images/aziz.jpg">
+</div>
+
+<div class="member">
+<div class="member-text">
+<h3>Нурали</h3>
+<p><b>Роль:</b> Project Maker</p>
+<p><b>Возраст:</b> 13 лет</p>
+<p><b>Занимается:</b> Разработка проекта</p>
+</div>
+<img src="images/nurali.jpg">
+</div>
+
 </section>
 
-<section class="tab-content" id="news">
-<h2>Новости</h2>
-<div class="news-item">
-<h3>20 Января 2026</h3>
-<p>Команда протестировала нового робота для исследования катакомб.</p>
-</div>
-<div class="news-item">
-<h3>15 Января 2026</h3>
-<p>Началась работа над визуализацией схем катакомб.</p>
-</div>
+<section id="values" class="section">
+<h2>❤️ Core Values</h2>
+<ul>
+<li>🤝 Командная работа</li>
+<li>💡 Инновации</li>
+<li>🎓 Обучение</li>
+<li>🌍 Влияние на общество</li>
+</ul>
 </section>
 
-<section class="tab-content" id="contacts">
-<h2>Контакты</h2>
+<section id="achievements" class="section">
+<h2>🏆 Достижения</h2>
+<ul>
+<li>Innovation Project Finalist — Kokshetau First Regional</li>
+<li>Peer Award — Astana First Qualifiers</li>
+</ul>
+</section>
+
+<section id="contacts" class="section">
+<h2>📬 Контакты</h2>
 <p>Email: 7n2025fll@gmail.com</p>
-<p>Спонсоры: пока нет</p>
+<p>Телефон: +7 777 999 1058</p>
+<p>Спонсоры: в поиске</p>
 </section>
+
 </main>
 
 <footer>
-<p>© 2026 Команда FLL Obalduyes</p>
+© 2026 FLL Obalduyes — BIL Kokshetau
 </footer>
 
 <script>
-// Вкладки
-const buttons = document.querySelectorAll('.tab-button');
-const tabs = document.querySelectorAll('.tab-content');
-
-buttons.forEach(button => {
-    button.addEventListener('click', () => {
-        const target = button.getAttribute('data-tab');
-        tabs.forEach(tab => tab.style.display = tab.id === target ? 'block' : 'none');
+function openTab(id) {
+    document.querySelectorAll('.section').forEach(s => {
+        s.classList.remove('active');
     });
-});
 
-// Показываем первую вкладку по умолчанию
-tabs.forEach((tab,i)=>tab.style.display = i===0?'block':'none');
+    const section = document.getElementById(id);
+    section.classList.add('active');
+}
+openTab('home');
 </script>
+
 </body>
 </html>
